2013-03-21  Teodor Zlatanov  <tzz@lifelogs.com>

	* progmodes/cfengine.el (cfengine-common-syntax): Add "_" to word
	syntax for both `cfengine2-mode' and `cfengine3-mode'.

2013-03-20  Juri Linkov  <juri@jurta.org>

	* info.el (Info-next-reference-or-link)
	(Info-prev-reference-or-link): New functions.
	(Info-next-reference, Info-prev-reference): Use them.
	(Info-try-follow-nearest-node): Handle footnote navigation.
	(Info-fontify-node): Fontify footnotes.  (Bug#13989)

2013-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (posn-point, posn-string): Fix it here instead (bug#13979).
	* mouse.el (mouse-on-link-p): Undo scroll-bar fix.

2013-03-20  Paul Eggert  <eggert@cs.ucla.edu>

	Suppress unnecessary non-ASCII chatter during build process.
	* international/ja-dic-cnv.el (skkdic-collect-okuri-nasi)
	(batch-skkdic-convert): Suppress most of the chatter.
	It's not needed so much now that machines are faster,
	and its non-ASCII component was confusing; see Dmitry Gutov in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-03/msg00508.html>.

2013-03-20  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-chop): Fix bug#10994.

2013-03-19  Dmitry Gutov  <dgutov@yandex.ru>

	* whitespace.el (whitespace-font-lock, whitespace-font-lock-mode):
	Remove vars.
	(whitespace-color-on, whitespace-color-off):
	Use `font-lock-fontify-buffer' (Bug#13817).

2013-03-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mouse.el (mouse--down-1-maybe-follows-link): Fix follow-link
	remapping in mode-line.
	(mouse-on-link-p): Also check [mode-line follow-link] bindings.

2013-03-19  Dmitry Gutov  <dgutov@yandex.ru>

	* whitespace.el (whitespace-color-on): Use `prepend' OVERRIDE
	value for `whitespace-line' face (Bug#13875).
	(whitespace-font-lock-keywords): Change description.
	(whitespace-color-on): Don't save `font-lock-keywords' value, save
	the constructed keywords instead.
	(whitespace-color-off): Use `font-lock-remove-keywords' (Bug#13817).
